--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_riverpod: ^2.4.0
+  syncfusion_flutter_calendar: ^23.1.36
+  intl:
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
