--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   syncfusion_flutter_calendar: ^23.1.36
   intl:
   provider: ^6.0.5
+  syncfusion_flutter_core:
 
 dev_dependencies:
   flutter_test:
